<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/main_image_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@color/colorPrimaryDark"
        android:contentDescription="@string/main_image_description"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_image_header"
        app:tabBackground="@color/colorSecondary"
        app:tabTextColor="@color/textOnPrimary">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/login_text" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text" />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/main_fragment_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_tab_layout"
        />


</RelativeLayout>